core/tests/safety/test_vm_threads_unsafe_type.stderr
error[E0597]: `vm` does not live long enough
  --> tests/safety/test_vm_threads_unsafe_type.rs:34:26
   |
33 |     let vm = UnSendRootVm::new();
   |         -- binding `vm` declared here
34 |     let thread: Thread = vm.get_global(c"CO").unwrap();
   |                          ^^ borrowed value does not live long enough
...
37 |     let _: &str = thread.as_thread().resume(()).unwrap().data;
   |                   ----------------------------- argument requires that `vm` is borrowed for `'static`
38 | }
   | - `vm` dropped here while still borrowed
   |
note: requirements that the value outlives `'static` introduced here
  --> src/vm/core/vm.rs
   |
   |     pub fn get_global<'a, R: FromLua<'a>>(&'a self, name: impl AnyStr) ...
   |                              ^^^^^^^^^^^
   |
  ::: src/vm/thread/core.rs
   |
   |     pub fn resume<'b, T: FromLua<'b>>(&'b self, args: impl IntoLua) -> ...
   |                          ^^^^^^^^^^^
   |     where
   |         T: 'static, /* This clause ensures that a future call to collec...
   |            ^^^^^^^

error[E0597]: `thread` does not live long enough
  --> tests/safety/test_vm_threads_unsafe_type.rs:37:19
   |
34 |     let thread: Thread = vm.get_global(c"CO").unwrap();
   |         ------ binding `thread` declared here
...
37 |     let _: &str = thread.as_thread().resume(()).unwrap().data;
   |                   ^^^^^^-----------------------
   |                   |
   |                   borrowed value does not live long enough
   |                   argument requires that `thread` is borrowed for `'static`
38 | }
   | - `thread` dropped here while still borrowed
   |
note: requirements that the value outlives `'static` introduced here
  --> src/vm/thread/core.rs
   |
   |     pub fn resume<'b, T: FromLua<'b>>(&'b self, args: impl IntoLua) -> ...
   |                          ^^^^^^^^^^^
   |     where
   |         T: 'static, /* This clause ensures that a future call to collec...
   |            ^^^^^^^
